receiver-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: receiver-service
  labels:
    app: receiver-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
  selector:
    app: receiver-service
